平成25年1回目の結果を記録

--- a/html/terms.html
+++ b/html/terms.html
@@ -586,6 +586,19 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item" id="h_OP25B">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#OP25B" aria-expanded="false" aria-controls="OP25B">
+                        OP25B
+                    </button>
+                </h2>
+                <div id="OP25B" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        ISP管理下の動的IPアドレスからの電子メール送信について、管理外ネットワークのメールサーバへのSMTP通信を禁止することで
+                        ISPのメールサーバを介さずに送信側のメールサーバと直接コネクションを確立して送信されるスパムメールを防ぐ。
+                    </div>
+                </div>
+            </div>
             <div class="accordion-item" id="h_OpenFlow">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#OpenFlow" aria-expanded="false" aria-controls="OpenFlow">
@@ -654,6 +667,21 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item" id="h_PPP">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#PPP" aria-expanded="false" aria-controls="PPP">
+                        PPP(Point-to-Point Protocol)
+                    </button>
+                </h2>
+                <div id="PPP" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        電話回線を通じてコンピュータをネットワークに接続するダイヤルアップ接続でよく使われる、2点間を接続してデータ通信を行うための通信プロトコル。
+                        通信にリンク制御プロトコル(Link Control Protocol:LCP)とネットワーク制御プロトコル(Network Control Protocol:NCP)という2つの通信プロトコルを使用する。
+                        パケットのヘッダー領域を圧縮して伝送したり、PAP(Password Authentication Protocol)やCHAP(Challenge Handshake Authentication Protocol)といった
+                        認証機能を含んでいる。
+                    </div>
+                </div>
+            </div>
             <div class="accordion-item" id="h_PPTP">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#PPTP" aria-expanded="false" aria-controls="PPTP">
@@ -699,6 +727,19 @@
                         RAID3とほぼ同じ。RAID3でビット／バイト単位だったストライピングをブロック単位で行う。<br>
                         RAID5：<br>
                         情報データとともにパリティビットも各ディスクに分散して書き込む方式。信頼性、アクセス性能がともに向上する。
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item" id="h_RARP">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#RARP" aria-expanded="false" aria-controls="RARP">
+                        RARP(Reverse Address Resolution Protocol)
+                    </button>
+                </h2>
+                <div id="RARP" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        自装置のMACアドレスから自装置に割り当てられているIPアドレスを知るためのプロトコル。データリンク層のプロトコルで
+                        ブロードキャストを利用する。
                     </div>
                 </div>
             </div>
@@ -785,6 +826,22 @@
                     <div class="accordion-body">
                         主観品質評価と客観品質評価の要素を交え、最高100点で音声を総合的に評価する指標。<br>
                         ノイズ感、音量感、エコーや遅延、歪みや途切れ感といった音声品質を左右する要因に利便性など満足感を与える要素を加えて定量的に算出される。
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item" id="h_SAN">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#SAN" aria-expanded="false" aria-controls="SAN">
+                        SAN(Storage Area Network)
+                    </button>
+                </h2>
+                <div id="SAN" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        個々のサーバにストレージを直接接続するのではなく、LANとは別にサーバ群の後ろにストレージ専用のネットワークを構築し、そこにストレージを統合する
+                        技術。ストレージとはHDDやSSDなどデータを長期保管しておくための記憶装置の総称。<br>
+                        ファイバーチャネルネットワークで構築するFC-SANとTCP/IPネットワークで構築するIP-SANの2種類がある。サーバとSANの接続は光ファイバーを伝送媒体とする
+                        FCP(Fiber Channel Protocol)やiSCSI(Internet SCSI)プロトコルによって行われるためより高速な転送が可能となる。またストレージがサーバから独立するため
+                        スケールアウトや運用管理も効率的に行えるようになる。
                     </div>
                 </div>
             </div>
@@ -1018,6 +1075,22 @@
                         ①各ノードのポートのうちルートノードまでの区間コストが最も低いポートをルートポートとする<br>
                         ②ノード間の各リンクのうちルートノードに近い方を指定ポートする<br>
                         ③ルートポートと指定ポート以外は非指定ポートとしてブロックする
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item" id="h_パイプライン処理">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#パイプライン処理" aria-expanded="false" aria-controls="                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#パイプライン処理" aria-expanded="false" aria-controls="フラグシーケンス">
+                        パイプライン処理
+                    </button>
+                </h2>
+                <div id="パイプライン処理" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        パイプラインの処理時間は以下の公式で求められる。<br>
+                        (D + I - 1) × P<br>
+                        D：パイプラインの深さ(命令のステージ数)<br>
+                        I：命令数<br>
+                        P：パイプラインのピッチ(時間)
                     </div>
                 </div>
             </div>
