--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_NSレコード">NSレコード</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -84,7 +84,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -102,7 +102,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -120,7 +120,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -138,7 +138,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -156,7 +156,7 @@
                         <td class="p-1"><a href="html/terms.html#h_GARP">GARP</a></td>
                         <td class="p-1"><a href="html/terms.html#h_フラグシーケンス">フラグ<br>シーケンス</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -174,7 +174,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -192,7 +192,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <<td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -210,7 +210,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -228,7 +228,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_RSVP">RSVP</a></td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -246,7 +246,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_PPP">PPP</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -264,7 +264,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_RARP">RARP</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -282,7 +282,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -300,7 +300,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -318,7 +318,7 @@
                         <td class="p-1"><a href="html/terms.html#h_WebSocket">WebSocket</a></td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -336,7 +336,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_DNSSEC">DNSSEC</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -354,7 +354,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_OP25B">OP25B</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -372,7 +372,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -390,7 +390,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -408,7 +408,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -426,7 +426,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -444,7 +444,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_RAID">RAID</a></td>
                         <td class="p-1"><a href="html/terms.html#h_メモリインタリープ">メモリ<br>インタリープ</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_パイプライン処理">パイプライン<br>処理</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -462,7 +462,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_SAN">SAN</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -480,7 +480,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -498,7 +498,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -516,7 +516,7 @@
                         <td class="p-1">92%</td>
                         <td class="p-1">84%</td>
                         <td class="p-1">84%</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">64%</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
