平成24年1回目の結果を記録

--- a/html/terms.html
+++ b/html/terms.html
@@ -290,6 +290,19 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item" id="h_EAP">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#EAP" aria-expanded="false" aria-controls="EAP">
+                        EAP(Extensible Authentication Protocol)
+                    </button>
+                </h2>
+                <div id="EAP" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        PPPの認証機能を拡張したプロトコル。デジタル証明書、メッセージダイジェスト、OTPなど様々な認証方式をサポートしているが
+                        暗号化通信の機能は規定されていない。
+                    </div>
+                </div>
+            </div>
             <div class="accordion-item" id="h_FaaS">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#FaaS" aria-expanded="false" aria-controls="FaaS">
@@ -456,6 +469,19 @@
                 <div id="LDAP" class="accordion-collapse collapse">
                     <div class="accordion-body">
                         ユーザー名やパスワードなどのユーザー情報やネットワーク資源情報を一元管理するとともにそれらの情報を提供するディレクトリサービスにアクセスするためのプロトコル。
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item" id="h_MDA">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#MDA" aria-expanded="false" aria-controls="MDA">
+                        MDA(Model Driven Architecture)
+                    </button>
+                </h2>
+                <div id="MDA" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        モデル駆動型アーキテクチャと訳され、設計モデルと実装技術を完全に分離し、ベンダーやプラットフォームに依存しない開発を可能とする技術。
+                        UMLやCOBRAなどの規格化団体として有名なOMG(Object-oriented Management Group)によって策定された。
                     </div>
                 </div>
             </div>
@@ -957,6 +983,19 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item" id="h_WPA2">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#WPA2" aria-expanded="false" aria-controls="WPA2">
+                        WPA2(Wi-Fi Protected Access 2)
+                    </button>
+                </h2>
+                <div id="WPA2" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        無線LANの業界団体Wi-Fi Allianceが策定した無線LANの暗号化方式の規格。WPAではWEPで指摘された脆弱性を克服するためにTKIP(Temporal Key Integrity Protocol)を使用して、
+                        一定時間(または一定通信量)ごとに暗号鍵を更新することでセキュリティを高めている。
+                    </div>
+                </div>
+            </div>
             <div class="accordion-item" id="h_ZigBee">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#ZigBee" aria-expanded="false" aria-controls="ZigBee">
@@ -1080,7 +1119,7 @@
             </div>
             <div class="accordion-item" id="h_パイプライン処理">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#パイプライン処理" aria-expanded="false" aria-controls="                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#パイプライン処理" aria-expanded="false" aria-controls="フラグシーケンス">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#パイプライン処理" aria-expanded="false" aria-controls="パイプライン処理">
                         パイプライン処理
                     </button>
                 </h2>
@@ -1091,6 +1130,19 @@
                         D：パイプラインの深さ(命令のステージ数)<br>
                         I：命令数<br>
                         P：パイプラインのピッチ(時間)
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item" id="h_ハミング符号">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#ハミング符号" aria-expanded="false" aria-controls="ハミング符号">
+                        ハミング符号
+                    </button>
+                </h2>
+                <div id="ハミング符号" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        送信される情報ビットに対して検査ビットを付加することで受信側で2ビットの誤り検出と1ビットの自動訂正機能を持った方式。
+                        ECCメモリやRAID2、Bluetoothの誤り訂正方式として採用されている。
                     </div>
                 </div>
             </div>
