--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -86,7 +86,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_LSA">LSA</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -104,7 +104,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -122,7 +122,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -140,7 +140,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -158,7 +158,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -176,7 +176,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -194,7 +194,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_ハミング符号">ハミング<br>符号</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -212,7 +212,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -230,7 +230,7 @@
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -248,7 +248,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_PPP">PPP</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -266,7 +266,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_RARP">RARP</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">×</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -284,7 +284,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -302,7 +302,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -320,7 +320,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_ルートリフレクション">ルート<br>リフレクション</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -338,7 +338,7 @@
                         <td class="p-1"><a href="html/terms.html#h_DNSSEC">DNSSEC</a></td>
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -356,7 +356,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_OP25B">OP25B</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -374,7 +374,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -392,7 +392,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -410,7 +410,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -428,7 +428,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_WPA2">WPA2</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -446,7 +446,7 @@
                         <td class="p-1"><a href="html/terms.html#h_メモリインタリープ">メモリ<br>インタリープ</a></td>
                         <td class="p-1"><a href="html/terms.html#h_パイプライン処理">パイプライン<br>処理</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -464,7 +464,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_SAN">SAN</a></td>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -482,7 +482,7 @@
                         <td class="p-1">×</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">×</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -500,7 +500,7 @@
                         <td class="p-1">⚪︎</td>
                         <td class="p-1">⚪︎</td>
                         <td class="p-1"><a href="html/terms.html#h_MDA">MDA</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
@@ -518,7 +518,7 @@
                         <td class="p-1">84%</td>
                         <td class="p-1">64%</td>
                         <td class="p-1">84%</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">80%</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                     </tr>
